<resources>
    <string name="app_name">Traveling Salesman</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="data_header">Data</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="location_title">Enable Location Services</string>
    <string name="push_title">Enable Push Notifications</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_account_management">Account Management</string>
    <string name="title_user_preferences">User Preferences</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Start Planning Your Next Memory</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_google_auth">Google</string>
    <string name="prompt_facebook_auth">Facebook</string>
    <string name="prompt_twitter_auth">Twitter</string>
    <string name="prompt_phone_auth">Phone</string>
    <string name="title_auth_greeting">Plan Your\nNext Memory</string>
    <string name="title_auth_message">Click one of the buttons below to sign in or register.</string>
    <string name="title_sign_up">Don\'t have an account? Sign Up.</string>
    <string name="title_register_greeting">Almost There!</string>
    <string name="prompt_name">First and Last name</string>
    <string name="prompt_email_address">Email Address</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_sign_in">Already have an account? Sign in.</string>
    <string name="text_or">OR</string>
    <string name="title_sign_in_greeting">Welcome Back!\nWe\'re Glad To \nSee you</string>
    <string name="title_sign_in_message">Sign in and start planning your next memory</string>
    <string name="farewell_header">See Ya Later!</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_account">Delete</string>
    <string name="update_location">Update Location Manually</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_plans">Plans</string>
    <string name="content_description_sign_in_button">Sign In Button</string>
    <string name="content_description_exit_sign_in">Exit Sign In</string>
    <string name="prompt_reset_password">Forgot your password? Reset it.</string>
    <string name="title_rest_password">Oops! Reset Your Password Below.</string>
    <string name="reset">Check your email for reset link</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset_password_failed">Error: could not send password reset link</string>
    <string name="sync_header">Sync</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="prompt_skip">Skip</string>

    <string name="getting_started_title">Hey, There.</string>
    <string name="getting_started_message">Thank you for checking out Suggestly, we hope our recommendations can make your life a little more fun.</string>

    <string name="push_notifications_title">Never Miss an Update</string>
    <string name="push_notification_messages">Receive notifications for hot upcoming events, invites to experiences, and new suggestions in your sphere.</string>

    <string name="enable_location_services_title">Find Suggestions Nearby</string>
    <string name="enable_location_services_message">Allow Location Services to find suggestions near you and access location-based features.</string>

    <string name="add_location_title">Search For Your Location</string>
    <string name="add_location_message">Many of the features used in this app relies on location. Search for a location above and pick from the list.</string>

    <string name="finalize_finalizing_message">Finalizing.</string>
    <string name="finalize_getting_location_message">Retrieving Your Location.</string>
    <string name="finalize_getting_suggestions_message">Finding Suggestions Near You.</string>
    <string name="finalize_personalizing_experience_message">Personalizing Your Experience.</string>
</resources>