<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item app:showAsAction="always"
        android:id="@+id/navigation_home"
        android:title="@string/title_home"
        android:icon="@drawable/ic_baseline_home_filled"
        tools:ignore="AlwaysShowAction" />

    <item app:showAsAction="always"
        android:id="@+id/navigation_dashboard"
        android:title="@string/title_dashboard"
        android:icon="@drawable/ic_baseline_dashboard_filled"/>

    <item app:showAsAction="always"
        android:id="@+id/navigation_plans"
        android:title="@string/title_plans"
        android:icon="@drawable/ic_baseline_plans_filled"/>
</menu>