<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data>
        <variable
            name="viewModel"
            type="android.josephhowerton.travelingsalesman.ui.auth.register.RegisterViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.register.RegisterFragment">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_baseline_close_24"
            android:onClick="@{viewModel::onNavigateBack}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".15"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_middle_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.55" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_bottom_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".95"/>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start_vertical_greeting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".075"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end_vertical_greeting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".925"/>

        <EditText
            android:id="@+id/text_view_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:hint="@string/prompt_name"
            android:background="@drawable/shape_edit_text"
            app:layout_constraintBottom_toTopOf="@id/text_view_email"
            app:layout_constraintTop_toTopOf="@+id/guideline_top_text"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end_vertical_greeting"
            app:layout_constraintStart_toStartOf="@+id/guideline_start_vertical_greeting"/>

        <EditText
            android:id="@+id/text_view_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:hint="@string/prompt_email_address"
            android:inputType="textEmailAddress"
            android:background="@drawable/shape_edit_text"
            app:layout_constraintTop_toBottomOf="@id/text_view_name"
            app:layout_constraintBottom_toTopOf="@id/text_view_password"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end_vertical_greeting"
            app:layout_constraintStart_toStartOf="@+id/guideline_start_vertical_greeting"/>

        <EditText
            android:id="@+id/text_view_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:background="@drawable/shape_edit_text"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/text_view_email"
            app:layout_constraintBottom_toTopOf="@+id/guideline_middle_text"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end_vertical_greeting"
            app:layout_constraintStart_toStartOf="@+id/guideline_start_vertical_greeting"/>

        <ImageButton
            android:id="@+id/btn_email_auth"
            style="@style/Theme.TravelingSalesman.ButtonStroke"
            android:src="@drawable/ic_baseline_mail_24"
            android:onClick="@{viewModel::onSignUpWithEmail}"
            app:layout_constraintBottom_toTopOf="@id/text_view_or"
            app:layout_constraintTop_toTopOf="@+id/guideline_middle_text"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end_vertical_greeting"
            app:layout_constraintStart_toStartOf="@id/guideline_start_vertical_greeting"/>

        <View
            android:id="@+id/view_start"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="20dp"
            android:background="@color/green"
            app:layout_constraintTop_toTopOf="@+id/text_view_or"
            app:layout_constraintEnd_toStartOf="@+id/text_view_or"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_or"
            app:layout_constraintStart_toStartOf="@+id/guideline_start_vertical_greeting" />

        <TextView
            android:id="@+id/text_view_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_or"
            android:textColor="@color/green"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/btn_email_auth"
            app:layout_constraintBottom_toTopOf="@+id/btn_google_auth"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end_vertical_greeting"
            app:layout_constraintStart_toStartOf="@+id/guideline_start_vertical_greeting" />

        <View
            android:id="@+id/view_end"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="40dp"
            android:background="@color/green"
            app:layout_constraintTop_toTopOf="@+id/text_view_or"
            app:layout_constraintStart_toEndOf="@+id/text_view_or"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_or"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end_vertical_greeting" />

        <ImageButton
            android:id="@+id/btn_google_auth"
            android:src="@drawable/ic_google_logo"
            style="@style/Theme.TravelingSalesman.ButtonSolid"
            app:layout_constraintTop_toBottomOf="@+id/text_view_or"
            app:layout_constraintBottom_toTopOf="@+id/text_view_sign_in"
            app:layout_constraintEnd_toEndOf="@id/guideline_end_vertical_greeting"
            app:layout_constraintStart_toStartOf="@+id/guideline_start_vertical_greeting"/>

        <TextView
            android:id="@+id/text_view_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/green"
            android:onClick="@{viewModel::onNavigateBack}"
            android:text="@string/prompt_sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_google_auth"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end_vertical_greeting"
            app:layout_constraintStart_toStartOf="@+id/guideline_start_vertical_greeting" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>